<resources>
    <string name="app_name">Knightlife</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_settings">Settings</string>
    <string name="A_Block">A Block</string>
    <string name="B_Block">B Block</string>
    <string name="C_Block">C Block</string>
    <string name="D_Block">D Block</string>
    <string name="E_Block">E Block</string>
    <string name="F_Block">F Block</string>
    <string name="G_Block">G Block</string>
    <string name="A_Lab">A Lab</string>
    <string name="B_Lab">B Lab</string>
    <string name="C_Lab">C Lab</string>
    <string name="D_Lab">D Lab</string>
    <string name="E_Lab">E Lab</string>
    <string name="F_Lab">F Lab</string>
    <string name="G_Lab">G Lab</string>
    <string name="Class_Meeting">Class Meeting</string>
    <string name="Advisory">Advisory</string>
    <string name="Assembly">Assembly</string>
    <string name="Activities">Activities</string>
    <string name="Check">Check if first lunch</string>
    <string name="Free_morn">Free morning</string>
    <string name="test_course">Chemistry</string>
    <string name="english">English</string>
    <string name="X_Block">X Block</string>
    <string name="Lunch">Lunch</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="FLunch">Second Lunch</string>
    <string name="BBN_Knightlife">BBN Knightlife</string>
    <string name="Input_Class">Input Class</string>
    <string name="Current_Class">Current Class</string>

</resources>
